--- a/Project.toml
+++ b/Project.toml
@@ -5,5 +5,6 @@ Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SCS = "c946c3f1-0d1f-5ce8-9dea-7daa1f7e2d13"
