--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
