Add hw8.jl with working (can solve ORR HW1) barrier-method-based LP solver

--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
